tests/cases/compiler/separate1-1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/separate1-1.ts`, Apache-2.0 License

X.f();
//~^ ERROR: Cannot find name 'X'.